# spine-runtimes

./: .gitignore  CMakeLists - Copy.txt  CMakeLists.txt  README.md
demos/TestSpineC/: .gitignore  CastleEngineManifest.xml  README.md  TestSpineC_standalone.dpr  TestSpineC_standalone.dproj  TestSpineC_standalone.lpi  castleautogenerated.pas  run.sh
demos/TestSpineC/code/: gamestatemain.pas
demos/TestSpineC/data/: gamestatemain.castle-user-interface
demos/TestSpineC/data/models/: dragon.atlas  dragon.json  saratoga.atlas  saratoga.json
demos/TestSpineC/data/saratoga/: saratoga.json
spine-c/: CMakeLists.txt
spine-c/spine-c/include/spine/: extension.h
spine-c/spine-c/src/spine/: extension.c
src/: CastleSpine.pas  spine.pas
